# pickplace

bhampick/: CMakeLists.txt  README.txt  package.xml  setup.py
bhampick/conf/: test.yml
bhampick/launch/: 2ndCol.launch  3rdCol.launch  Col.launch  NoZ.launch  Split.launch  allgpd.launch  allgpdcr3.launch  grasp.launch  pick.launch  rviz.launch  togoal.launch
bhampick/msg/: dimmsg.msg  posefortf.msg  pub.msg
bhampick/scripts/: client.py  client2.py
bhampick/src/: GPDgoal.py  GPDgraspservice.py  GPDobjtf.cpp  aa.py  ab.py  bb.py  broadcast.cpp  cc.py  center.txt  client.cpp  client2.cpp  colfastpick.py  colmain.cpp  colmain2nd.cpp  colmain3rd.cpp  colmain3rdnoz.cpp  colpick2nd.py  colpick3rd.py  colpubdim.py  colpubrpy.py  goalcr3.py  goalfixed.py  goalver2.py  grasptest.cpp  markerpub.cpp  obtf.py  pick.cpp  pubdynamiccam.py  sendpose.py  splitcolmainpick.cpp  splitcolmainplace.cpp  splitcolpick.py  testclient.cpp  testtf.py  testyaml.py  tfb.cpp  wgrvhnio.py
bhampick/srv/: boxpose.srv  graspit.srv  objectlist.srv  posedim.srv
bhampick/txt/: 1goalwithcart.txt  1objtf.txt  Colmain17June.txt  Colmain18June.txt  Colmainlatest.txt  Colpick18June.txt  Colpicklatest.txt  additional.txt  anotherver.txt  colmain15Juneend.txt  colpick15Juneend.txt  colpick16June03.13.txt  colpick19June.txt  goal.txt  goalwithcartesian.txt  latestupdate.txt  objtf.txt  oldver.txt  originver.txt  originverwithtf.txt  pick.txt  sjdkgfhkdgfb.txt  testver.txt  tfb.cpp.txt  tffrompose15June.txt  tffrompose15Juneend.txt
pick/: CMakeLists.txt  package.xml
pick/launch/: pick.launch
pick/src/: pick.py
pick/txt/: bestpick.txt  bestpickmain.txt  pick20.txt  pick21.txt  pick21_2.txt  pick21_3.txt  pick22_1.txt  pick23_1.txt  pickmain21.txt  pickmain21_3.txt  pickmain23_1.txt
pickplace_include/: CMakeLists.txt  package.xml
pickplace_include/launch/: pickplace.launch
pickplace_include/src/: client.py  client2.py  deleteholdingobject.py  usefortest.py  walkiegohome.py
pickplace_include/srv/: caleddim.srv  dimension.srv  pickplace.srv  placecond.srv  tfcount.srv
place/: CMakeLists.txt  package.xml
place/launch/: place.launch
place/src/: dimensioncal.cpp  place.py  placemain.cpp
place/txt/: bestdimensioncal.txt  bestplace.txt  place21_3.txt  place22_1.txt  placemain20.txt  placemain21.txt  placemain21_2.txt  placemain21_3.txt  placemain22_1.txt  placemain24_1.txt
